Fixed z-index bug where the widget was positioned behind the Craft's edition logo
From: f8871741d4cfd72ae94a53a496266304b0ab3a64

--- a/resources/sass/ReportWidget.scss
+++ b/resources/sass/ReportWidget.scss
@@ -1,5 +1,7 @@
 .analytics_report
 {
+    z-index: 1;
+
     .settings.icon { position: relative; z-index: 1; }
 
     h2 { display: none; }
